--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "leaflet.heat",
-  "version": "0.2.0",
+  "name": "@dataxquare/leaflet.heat",
+  "version": "0.2.1",
   "description": "A tiny and fast Leaflet heatmap plugin.",
-  "homepage": "https://github.com/Leaflet/Leaflet.heat",
+  "homepage": "https://github.com/dataxquare/Leaflet.heat",
   "keywords": [
     "heatmap",
     "canvas",
@@ -14,7 +14,7 @@
   "author": "Vladimir Agafonkin",
   "repository": {
     "type": "git",
-    "url": "git://github.com/Leaflet/Leaflet.heat.git"
+    "url": "git+https://github.com/dataxquare/Leaflet.heat.git"
   },
   "main": "dist/leaflet-heat.js",
   "devDependencies": {
@@ -32,7 +32,8 @@
   },
   "scripts": {
     "test": "eslint src",
-    "prepublish": "uglifyjs node_modules/simpleheat/simpleheat.js src/HeatLayer.js -c -m -o dist/leaflet-heat.js"
+    "prepublish": "uglifyjs node_modules/simpleheat/simpleheat.js src/HeatLayer.js -c -m -o dist/leaflet-heat.js",
+    "publish": "npm publish --access public"
   },
   "license": "BSD-2-Clause",
   "jshintConfig": {
